# classification-obesity

./: main.py  pyproject.toml
models/: obesity_classifier_pipeline.pkl  obesity_classifier_v2_optimized.pkl
notebooks/: EDA.ipynb  Evaluate.ipynb  Preprocessing.ipynb  Tuninig.ipynb
src/: app.py  preprocessing.py
